--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .map-container {
-  height: 100vh;
+  height: 500px;
   width: 40%;
   height: 100vh;
   position: sticky !important; /* !important to override Gmaps inline CSS */
